src/objects/Account_Misure_Sartoriali__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cliente</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Schede_Misura_Sartoria_Solomeo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Altezza_montante_davanti__c</fullName>
        <label>Altezza montante davanti</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Altezza_montante_davanti_checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Altezza montante davanti checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Altezza_montante_davanti_rev__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Altezza montante davanti rev</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Altezza_montante_dietro__c</fullName>
        <label>Altezza montante dietro</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Altezza_montante_dietro_checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Altezza montante dietro checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Altezza_montante_dietro_rev__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Altezza montante dietro rev</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Associate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Associate</label>
        <referenceTo>Associated__c</referenceTo>
        <relationshipLabel>Schede Misure Sartoria Solomeo</relationshipLabel>
        <relationshipName>Schede_Misure_Sartoria_Solomeo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Circonferenza_bacino__c</fullName>
        <label>Circonferenza bacino</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Circonferenza_bacino_checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Circonferenza bacino checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Circonferenza_bacino_rev__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Circonferenza bacino rev</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Circonferenza_torace__c</fullName>
        <label>Circonferenza torace</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Circonferenza_torace_checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Circonferenza torace checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Circonferenza_torace_rev__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Circonferenza torace rev</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Circonferenza_vita_giacca__c</fullName>
        <label>Circonferenza vita (giacca)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Circonferenza_vita_giacca_checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Circonferenza vita (giacca) checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Circonferenza_vita_giacca_rev__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Circonferenza vita (giacca) rev</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Circonferenza_vita_pantalone__c</fullName>
        <label>Circonferenza vita (pantalone)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Circonferenza_vita_pantalone_checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Circonferenza vita (pantalone) checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Circonferenza_vita_pantalone_rev__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Circonferenza vita (pantalone) rev</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Curvo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Curvo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Forte_panciuto__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Forte panciuto</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Larghezza_cannelli_destra__c</fullName>
        <label>Larghezza cannelli destra</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Larghezza_cannelli_destra_checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Larghezza cannelli destra checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Larghezza_cannelli_destra_rev__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Larghezza cannelli destra rev</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Larghezza_cannelli_sinistra__c</fullName>
        <label>Larghezza cannelli sinistra</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Larghezza_cannelli_sinistra_checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Larghezza cannelli sinistra checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Larghezza_cannelli_sinistra_rev__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Larghezza cannelli sinistra rev</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Larghezza_coscia__c</fullName>
        <label>Larghezza coscia</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Larghezza_coscia_checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Larghezza coscia checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Larghezza_coscia_rev__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Larghezza coscia rev</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Larghezza_fondo__c</fullName>
        <label>Larghezza fondo</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Larghezza_fondo_checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Larghezza fondo checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Larghezza_fondo_finito__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Larghezza fondo finito</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Larghezza_fondo_finito_checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Larghezza fondo finito checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Larghezza_fondo_finito_rev__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Larghezza fondo finito rev</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Larghezza_fondo_imbastito__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Larghezza fondo imbastito</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Larghezza_fondo_imbastito_checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Larghezza fondo imbastito checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Larghezza_fondo_imbastito_rev__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Larghezza fondo imbastito rev</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Larghezza_fondo_rev__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Larghezza fondo rev</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Larghezza_fondo_risvolto__c</fullName>
        <label>Larghezza fondo risvolto</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Larghezza_fondo_risvolto_checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Larghezza fondo risvolto checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Larghezza_fondo_risvolto_rev__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Larghezza fondo risvolto rev</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Larghezza_ginocchio__c</fullName>
        <label>Larghezza ginocchio</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Larghezza_ginocchio_checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Larghezza ginocchio checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Larghezza_ginocchio_rev__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Larghezza ginocchio rev</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Larghezza_manica_bicipite__c</fullName>
        <label>Larghezza manica bicipite</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Larghezza_manica_bicipite_checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Larghezza manica bicipite checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Larghezza_manica_bicipite_rev__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Larghezza manica bicipite rev</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Larghezza_manica_fondo__c</fullName>
        <label>Larghezza manica fondo</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Larghezza_manica_fondo_checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Larghezza manica fondo checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Larghezza_manica_fondo_rev__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Larghezza manica fondo rev</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Larghezza_polpaccio__c</fullName>
        <label>Larghezza polpaccio</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Larghezza_polpaccio_checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Larghezza polpaccio checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Larghezza_polpaccio_rev__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Larghezza polpaccio rev</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Larghezza_scollo_totale__c</fullName>
        <label>Larghezza scollo (totale)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Larghezza_scollo_totale_checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Larghezza scollo (totale) checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Larghezza_scollo_totale_rev__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Larghezza scollo (totale) rev</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Larghezza_spalle_pt_to_pt__c</fullName>
        <label>Larghezza spalle pt. to pt.</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Larghezza_spalle_pt_to_pt_checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Larghezza spalle pt. to pt. checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Larghezza_spalle_pt_to_pt_rev__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Larghezza spalle pt. to pt. rev</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lungh_giacca_dietro__c</fullName>
        <label>Lungh. giacca dietro</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lungh_giacca_dietro_checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lungh. giacca dietro checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lungh_giacca_dietro_rev__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lungh. giacca dietro rev</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lungh_manica_destra_cucitura_interna__c</fullName>
        <label>Lungh. manica destra (cucitura interna)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lungh_manica_dx_cucit_interna_checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lungh manica dx (cucit interna) checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lungh_manica_dx_cucit_interna_rev__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lungh manica dx (cucit interna) rev</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lungh_manica_sinistra_cucitura_interna__c</fullName>
        <label>Lungh. manica sinistra(cucitura interna)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lungh_manica_sx_cucit_interna_checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lungh manica sx (cucit interna) checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lungh_manica_sx_cucit_interna_rev__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lungh manica sx (cucit interna) rev</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lunghezza_interno_gamba__c</fullName>
        <label>Lunghezza interno gamba</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lunghezza_interno_gamba_checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lunghezza interno gamba checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lunghezza_interno_gamba_rev__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lunghezza interno gamba rev</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Misure_dubbie__c</fullName>
        <label>Misure dubbie</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Montante__c</fullName>
        <label>Montante</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Montante_checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Montante checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Montante_rev__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Montante rev</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_values__c</fullName>
        <label>New values</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Normale__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Normale</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nota_approvatore_1_livello__c</fullName>
        <label>Nota approvatore 1 livello</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Nota_negozio__c</fullName>
        <label>Nota negozio</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Nota_sarto__c</fullName>
        <label>Nota sarto</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ordine_Sartoria_Solomeo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ordine Sartoria Solomeo</label>
        <referenceTo>Ordine_Sartoria_Solomeo__c</referenceTo>
        <relationshipLabel>Schede Misure Sartoria Solomeo</relationshipLabel>
        <relationshipName>Schede_Misure_Sartoria_Solomeo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Piega_sotto_collo__c</fullName>
        <label>Piega sotto collo</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Piega_sotto_collo_checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Piega sotto collo checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Piega_sotto_collo_rev__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Piega sotto collo rev</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Record_Type_Label__c</fullName>
        <formula>RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type Label</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rovesciato__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rovesciato</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Semi_bacino__c</fullName>
        <label>Semi bacino</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Semi_bacino_checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Semi bacino checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Semi_bacino_rev__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Semi bacino rev</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Semi_torace__c</fullName>
        <label>Semi torace</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Semi_torace_checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Semi torace checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Semi_torace_rev__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Semi torace rev</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Semi_vita__c</fullName>
        <label>Semi vita</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Semi_vita_checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Semi vita checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Semi_vita_rev__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Semi vita rev</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Spalle_Alte__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Spalle Alte</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Spalle_Basse__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Spalle Basse</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Spalle_Regolari__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Spalle Regolari</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Spalle_basse_totale_destra__c</fullName>
        <label>Spalle basse (totale) destra</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Spalle_basse_totale_destra_checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Spalle basse (totale) destra checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Spalle_basse_totale_destra_rev__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Spalle basse (totale) destra rev</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Spalle_basse_totale_sinistra__c</fullName>
        <label>Spalle basse (totale) sinistra</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Spalle_basse_totale_sinistra_checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Spalle basse (totale) sinistra checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Spalle_basse_totale_sinistra_rev__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Spalle basse (totale) sinistra rev</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status_Ordine__c</fullName>
        <formula>text(Ordine_Sartoria_Solomeo__r.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status Ordine</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stomaco_prominente__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Stomaco prominente</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Taglia__c</fullName>
        <label>Taglia</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Scheda Misure Sartoria Solomeo</label>
    <nameField>
        <displayFormat>M-{0000}</displayFormat>
        <label>Nome Scheda Misura Sartoria Solomeo</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Schede Misure Sartoria Solomeo</pluralLabel>
    <recordTypes>
        <fullName>Giacca_un_petto</fullName>
        <active>true</active>
        <label>Giacca un petto</label>
    </recordTypes>
    <recordTypes>
        <fullName>Giacca_un_petto_e_mezzo</fullName>
        <active>true</active>
        <label>Giacca un petto e mezzo</label>
    </recordTypes>
    <recordTypes>
        <fullName>Pantalone</fullName>
        <active>true</active>
        <label>Pantalone</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>